# graph_rag_part2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  WORK_LOG.md  app.py  chainlit.md  langgraph.json  pyproject.toml  work_LOG.md
.chainlit/: config.toml
data_volume/assets/: community_index.parquet  community_summaries.parquet  graph_schema.json  wikipedia_articles.parquet
public/: script.js  style.css  theme.json
scripts/: test_hf_client_integration.py  test_snowflake_embed.py  test_snowflake_rest.py  test_snowflake_standard.py
src/agent/: __init__.py  configuration.py  graph.py  settings.py  state.py
src/agent/infrastructure/: __init__.py  clients.py  gemini_client.py  hf_embedding_client.py  neo4j_client.py  nomic_client.py  pinecone_client.py
src/agent/nodes/: __init__.py  critic.py  evaluator.py  generation.py  models.py  retrieval.py  structural.py
src/agent/tools/: __init__.py  embeddings.py  gemini.py  knowledge_graph.py  source_resolver.py  synthesis.py  vector_store.py
tests/: conftest.py
tests/agent/: test_app.py  test_configuration.py  test_graph.py  test_state.py
tests/agent/infrastructure/: test_gemini_client.py  test_hf_embedding_client.py  test_neo4j_client.py  test_nomic_client.py  test_pinecone_client.py
tests/agent/nodes/: __init__.py  test_attribution_benchmarks.py  test_generation.py  test_homogenize.py  test_retrieval.py  test_structural.py
tests/agent/tools/: test_embeddings.py  test_gemini.py  test_knowledge_graph.py  test_source_resolver.py  test_synthesis.py  test_vector_store.py
tests/integration_tests/: __init__.py  test_connectivity.py  test_graph.py  test_multi_strategy.py  test_vector_config.py
